completed code for password manager - classes password generator, strength test, storage (save in memory), encryption, and main logic class

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,11 @@
 test_file.txt
+# Ignore the encrypted vault data
+vault.dat
+
+# Ignore Python's internal cache files
+__pycache__/
+*.pyc
+
+# Ignore local environment settings
+.env
+.venv/
